auth2.0 and 2nd collection setup
