# CSE-341-Personal/routes/index.js
@@ -2,10 +2,9 @@ const routes = require('express').Router();
 const swaggerUi = require('swagger-ui-express');
 const swaggerDocument = require('../swagger.json');
 const bodyParser = require('body-parser');
-const passport = require('passport');
-const session = require('express-session');
+const { requiresAuth } = require('express-openid-connect');
+const { route } = require('./journal');
 
-require('../passport')(passport);
 
 routes.use(bodyParser.json());
 
@@ -14,15 +13,9 @@ routes.get('/api-docs');
 routes.get('/', (req, res) =>{
     res.send('Add in /api-docs in the url to see the SwaggerUI')
 });
-routes.use(session({
-    secret: 'journal entry',
-    resave: false,
-    saveUninitialized: false
-}))
-routes.use(passport.initialize())
-routes.use(passport.session())
+
 routes.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
-routes.use('/journal', require('./journal'));
-routes.use('/auth', require('./auth'));
+routes.use('/journal', requiresAuth(), require('./journal'));
+routes.use('/journal-count', require('./journal-count'));
 
 module.exports = routes;
